--- a/.github/workflows/azure-webapp-deploy.yml
+++ b/.github/workflows/azure-webapp-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Full Stack (React + Node) to Azure Web App
+name: Deploy Full Stack React + Node App to Azure Web App
 
 on:
   push:
@@ -6,40 +6,49 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: cbbs-node-tamilini       # your Azure Web App name
+  NODE_VERSION: '22.x'                        # Node version
+  BACKEND_PATH: 'api'
+  FRONTEND_PATH: 'frontend'
+  BUILD_OUTPUT: 'frontend/dist'
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build frontend and backend
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: ${{ env.NODE_VERSION }}
 
-      # --- Build Frontend ---
+      # 1️⃣ Build React app
       - name: Install frontend dependencies
-        working-directory: ./frontend
+        working-directory: ${{ env.FRONTEND_PATH }}
         run: npm install
 
-      - name: Build frontend
-        working-directory: ./frontend
+      - name: Build frontend (Vite)
+        working-directory: ${{ env.FRONTEND_PATH }}
         run: npm run build
 
-      # --- Build Backend ---
+      # 2️⃣ Install backend dependencies
       - name: Install backend dependencies
-        working-directory: ./api
+        working-directory: ${{ env.BACKEND_PATH }}
         run: npm install
 
+      # 3️⃣ Prepare package for deployment
       - name: Prepare deployment package
         run: |
           mkdir deploy
-          cp -r api/* deploy/
-          cp -r frontend/dist deploy/frontend
+          cp -r ${{ env.BACKEND_PATH }} deploy/api
+          cp -r ${{ env.BUILD_OUTPUT }} deploy/frontend
 
-      - name: Upload artifact for deploy
+      # 4️⃣ Upload artifact for deployment
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: fullstack-app
@@ -48,12 +57,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
-
+    name: Deploy to Azure Web App
     steps:
-      - name: Download artifact from build job
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: fullstack-app
@@ -68,6 +74,5 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'cbbs-node-web'   # your Azure Web App name
-          slot-name: 'Production'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           package: ./deploy
