--- a/.github/workflows/azure-webapp-deploy.yml
+++ b/.github/workflows/azure-webapp-deploy.yml
@@ -1,5 +1,9 @@
 name: Deploy Full Stack React + Node App to Azure Web App
 
+permissions:
+  contents: read
+  id-token: write
+
 on:
   push:
     branches:
@@ -44,3 +48,4 @@ jobs:
           slot-name: Production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ./frontend/dist
+
