--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,10 +32,16 @@ jobs:
       run: |
         cd frontend
         cat > server.js << 'EOF'
-        const express = require('express');
-        const path = require('path');
+        import express from 'express';
+        import path from 'path';
+        import { fileURLToPath } from 'url';
+        
+        const __filename = fileURLToPath(import.meta.url);
+        const __dirname = path.dirname(__filename);
+        
         const app = express();
         const PORT = process.env.PORT || 8080;
+        
         app.use(express.static(path.join(__dirname, 'dist')));
         app.get('*', (req, res) => res.sendFile(path.join(__dirname, 'dist', 'index.html')));
         app.listen(PORT, '0.0.0.0', () => console.log('Running on ' + PORT));
